# FatLibrary

./: .gitmodules  CMakeLists.txt  CompileOptions.cmake  FatDefines.hpp  FatLibrary.cd  FatLibrary.hpp  FatLibrary.vcxproj  FatLibrary.vcxproj.filters  FatNamespaces.hpp  FatPound.hpp  FatPound.ixx  README.md
.github/workflows/: gcc-cmake-debug.yml  gcc-cmake-release.yml  linux-clang-cmake-debug-with-modules.yml  linux-clang-cmake-debug.yml  linux-clang-cmake-release-with-modules.yml  linux-clang-cmake-release.yml  linux-gcc-cmake-debug-with-modules.yml  linux-gcc-cmake-debug.yml  linux-gcc-cmake-release-with-modules.yml  linux-gcc-cmake-release.yml  linux-gcc-debug-with-modules.yml  linux-gcc-debug.yml  linux-gcc-release-with-modules.yml  linux-gcc-release.yml  msbuild_x64_debug.yml  msbuild_x64_release.yml  windows-msvc-msbuild-x64-debug.yml  windows-msvc-msbuild-x64-release.yml  windows-msvc-x64-debug.yml  windows-msvc-x64-release.yml
Algorithm/: Algorithm.hpp  CMakeLists.txt  Searching.hpp  Sorting.hpp
Algorithm/Graph/: BFS.cpp  BFS.hpp  CMakeLists.txt  DFS.cpp  DFS.hpp  Graph.hpp
Algorithm/include/: Searching.hpp  Sorting.hpp
Algorithm/modules/: Searching.ixx  Sorting.ixx
Automata/: Automata.hpp  CFG.cpp  CFG.hpp  CMakeLists.txt  TLT.cpp  TLT.hpp  TLT_v2.cpp  TLT_v2.hpp
Automata/include/: CFG.hpp  TLT.hpp  TLT_v2.hpp
Automata/modules/: CFG.ixx  TLT.ixx  TLT_v2.ixx
Automata/src/: CFG.cpp  TLT.cpp  TLT_v2.cpp
Bit/: Bit.hpp  CMakeLists.txt
Bit/include/: Common.hpp
Bit/modules/: Common_Bit.ixx
Bitwise/: Bitwise.hpp  Concepts.hpp
Colors/: CMakeLists.txt  Colors.hpp
Colors/ARGB/: ARGB.hpp  CMakeLists.txt
Concurrency/: CMakeLists.txt  Concurrency.hpp  TaskQueue.cpp  TaskQueue.hpp
Concurrency/include/: TaskQueue.hpp  ThreadPool.hpp
Concurrency/modules/: TaskQueue.ixx  ThreadPool.ixx
Concurrency/src/: TaskQueue.cpp  ThreadPool.cpp
Cryptography/: CMakeLists.txt  Cryptography.hpp  XorCipher.hpp
Cryptography/include/: XorCipher.hpp
Cryptography/modules/: XorCipher.ixx
DSA/: CMakeLists.txt  DSA.hpp  DirectedGraph.hpp
DSA/Cryptography/: XorCipher.hpp
DSA/LinkedList/: CMakeLists.txt  Doubly.hpp  DoublyCircular.hpp  LinkedList.hpp  Singly.hpp  SinglyCircular.hpp
DSA/Tree/: AVL.hpp  B.hpp  BST.hpp  B_Plus.hpp  CMakeLists.txt  IPR.hpp  Tree.hpp
DSA/include/: DirectedGraph.hpp
File/: CMakeLists.txt  File.cpp  File.hpp
File/include/: Common.hpp
File/modules/: Common_File.ixx
File/src/: Common_File.cpp  File.cpp
Geometry/: CMakeLists.txt  Geometry.hpp  Geometry.ixx
Geometry/Shape/: CMakeLists.txt  Shape.hpp
Geometry/include/: AngularConv.hpp  Common.hpp  EulerAngles.hpp  FieldOfView.hpp  Projection.hpp
Geometry/modules/: AngularConv.ixx  Common_Geometry.ixx  EulerAngles.ixx  FieldOfView.ixx  Projection.ixx
Geometry/src/: Common.cpp  Common_Geometry.cpp
Graph/: CMakeLists.txt  Graph.hpp
Graph/include/: BFS.hpp  DFS.hpp  DirectedGraph.hpp
Graph/modules/: BFS.ixx  DFS.ixx  DirectedGraph.ixx
Graph/src/: BFS.cpp  DFS.cpp  DirectedGraph.cpp
IO/: CMakeLists.txt  IO.hpp  KeyEvent.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  MouseEvent.hpp
IO/include/: Keyboard.hpp  Mouse.hpp
IO/modules/: Keyboard.ixx  Mouse.ixx
IO/src/: Keyboard.cpp  Mouse.cpp
Math/: AngularConv.hpp  CMakeLists.txt  Common.hpp  Geometry.hpp  Math.cpp  Math.hpp  Multiplicable.hpp  Multiplicative.hpp  Primes.hpp  Rect.hpp  RectF.hpp
Math/Geometry/: AngularConv.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Geometry.hpp  Rectangle.hpp
Math/Numbers/: CMakeLists.txt  Common.hpp  Numbers.hpp  Primes.hpp  Sets.hpp
Math/Numset/: Numset.hpp  Rational.hpp
Math/include/: Common.hpp  Multiplicative.hpp  Special.hpp
Math/modules/: Common_Math.ixx  Multiplicative.ixx  Special.ixx
Memory/: CMakeLists.txt  Memory.cpp  Memory.hpp
Memory/include/: Common.hpp
Memory/modules/: Common_Memory.ixx
Memory/src/: Common.cpp  Memory.cpp
Numbers/: CMakeLists.txt  Numbers.hpp
Numbers/include/: Common.hpp  Primes.hpp  Sets.hpp
Numbers/modules/: Common_Numbers.ixx  Primes.ixx  Sets.ixx
Random/: CMakeLists.txt  Random.hpp  URand.cpp  URand.hpp
Random/include/: Common.hpp  URand.hpp
Random/modules/: Common_Random.ixx  URand.ixx
Random/src/: URand.cpp
Traits/: CMakeLists.txt  Callable.hpp  Extents.hpp  Formation.hpp  Indirection.hpp  Traits.hpp
Traits/include/: Bitwise.hpp  Callable.hpp  Extents.hpp  Indirection.hpp  Modification.hpp
Traits/modules/: Bitwise.ixx  Callable.ixx  Extents.ixx  Formation.ixx  Indirection.ixx  Modification.ixx
Util/: Color.hpp  Common.hpp  Random.hpp  ScreenSizeInfo.hpp  Surface.cpp  Surface.hpp  Timer.hpp  Util.hpp  ViewXM.cpp  ViewXM.hpp
Util/Gfx/: FullScreenQuad.hpp  Gfx.cpp  Gfx.hpp  ResourcePack.hpp  SizePack.hpp
Util/Time/: AutoTimer.cpp  AutoTimer.hpp  Time.hpp
Utility/: CMakeLists.txt  Color.hpp  Common.cpp  Common.hpp  Surface.cpp  Surface.hpp  Timer.hpp  Utility.hpp  ViewXM.cpp  ViewXM.hpp
Utility/Gfx/: CMakeLists.txt  FullScreenQuad.cpp  FullScreenQuad.hpp  Gfx.hpp  ResourcePack.cpp  ResourcePack.hpp  SizePack.hpp
Utility/include/: Color.hpp  Common.hpp  SizePack.hpp  Surface.hpp  ViewXM.hpp
Utility/modules/: Common_Utility.ixx  SizePack.ixx  Surface.ixx  Timer.ixx  ViewXM.ixx
Utility/src/: Common.cpp  Surface.cpp  ViewXM.cpp
Win32_/: CMakeLists.txt  Common.cpp  Common.hpp  FatWin32.hpp  FatWin32_Settings.hpp  IWindow.cpp  IWindow.hpp  MessageMap.hpp  Win32.hpp  Win32_.hpp  WinAPI.hpp  WinAPI_Settings.hpp  WindowEx.hpp  WndClassEx.hpp  _notes.txt
Win32_/COM/: CMakeLists.txt  COM.hpp  Manager.cpp  Manager.hpp
Win32_/D2D/: CMakeLists.txt  D2D.hpp  Graphics.cpp  Graphics.hpp
Win32_/D3D11/: CMakeLists.txt  D3D11.hpp  Graphics.hpp
Win32_/DXGI/: CMakeLists.txt  Common.cpp  Common.hpp  DXGI.hpp
Win32_/GDI_Plus/: CMakeLists.txt  GDI_Plus.hpp  Manager.cpp  Manager.hpp
_exp/: FatX.hpp
_experimental/: FatX.hpp
_macros/: Namespaces.hpp
_misc/: .clang-tidy  FatLibrary.cd
_props/: FatBoost.props  FatCV4.props  FatCV4_Debug.props  FatCV4_Release.props  FatLibrary.props
(+286 files in other folders)
